# Web3-Pi-UPS

./: .gitignore  README.md
common/: protocol.h  protocol_desc.md
docs/: ch32x-battery-mode-telemetry-fix.md
firmware-ESP32-LTE-M/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware-ESP32-LTE-M/.claude-flow/data/: pending-insights.jsonl
firmware-ESP32-LTE-M/components/microecc/: CMakeLists.txt
firmware-ESP32-LTE-M/docs/: info.md  mqtt-broker-setup.md
firmware-ESP32-LTE-M/main/: CMakeLists.txt  cmdauth.c  cmdauth.h  identity.c  identity.h  idf_component.yml  main.c  modem.c  modem.h  mqtt.c  mqtt.h  pmu.c  pmu.h  secrets.h.example  wups_link.c  wups_link.h  wups_proto.h
firmware-ESP32-LTE-M/tools/: idf  idf-mcp-server  make-nvs-blob  nvs-blob.template.csv  reset  send-at  send_at.py  serial-monitor  serial_monitor.py
firmware-ch32x/: .clang-format  .cproject  .gitignore  .project  .template  README.md  USB-PD.launch  USB-PD.wvproj  flash.sh  watch-wch-hex.sh
firmware-ch32x/.mrs/: USB-PD.mrs-workspace
firmware-ch32x/Debug/: debug.h
firmware-ch32x/Peripheral/inc/: ch32x035_usbpd.h
firmware-ch32x/User/: PD_Process.c  PD_Process.h  i2c_lib.c  i2c_lib.h  lm75b.c  lm75b.h  main.c  mp2762a.c  mp2762a.h  tps55289.c  tps55289.h  wups_proto.h
firmware-rp2040/: README.md  platformio.ini
firmware-rp2040/src/: main.cpp  mp2762a.h  tps55289.h  wups_proto.h  wups_router.cpp  wups_router.h
hardware/electronics/main-board/: Web3-Pi-UPS-BUG-1.md
hardware/enclosure/: Buttons.stl  Enclosure Bottom.stl  Enclosure Main.stl  Lock.stl  OLED Dimmed Window.stl  Press Lock Button.stl  Side Cover.stl  Web3_Pi_UPS_3DPrinted.step
(+32 files in other folders)
